--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-wrap-balancer": "^0.4.1"
   },
   "devDependencies": {
+    "@types/node": "^20.1.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
