--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
-    "react-wrap-balancer": "^0.4.1"
+    "react-wrap-balancer": "^0.4.1",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.1.2",
